@@ -1,4 +1,5 @@
 19 Jan 2018
+update: user_unlocks.php to same style as the other block pages
 add: option to disable/enable newsrss feeds
 add: missing admin 'Show Friends' block
 
